--- a/applications/web/package.json
+++ b/applications/web/package.json
@@ -10,8 +10,9 @@
     "web-vitals": "^4.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
+    "start": "node server/index.ts",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
